# cpp-coverage-example

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: coverage.yml
src/: MyQueue.cpp  MyQueue.h
tests/: TestMyQueue.cpp
